# Time-Decay-Threshold-Consensus-system

./: Cargo.toml  README.md  doc.md  proposal.json
src/: allstruct.rs  createproposal.rs  createvote.rs  getDuration.rs  lib.rs  main.rs  validator.rs  vote.rs  votestruct.rs
tests/: createproposal_test.rs  createvote_test.rs
