[package]
name = "tempoVote"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
ed25519-dalek = "2.2.0"
hex = "0.4.3"
inquire = "0.7.5"
ntp = "0.5.0"
rand = "0.9.1"
serde = "1.0.219"
sha2 = "0.10.9"
[dependencies.uuid]
version = "1.17.0"
features=["v4"]
inquire="0.75"
