[package]
name = "tempoVote"
version = "0.1.0"
edition = "2024"
default-run = "tempoVote"  

[dependencies]
clap = { version = "4.0", features = ["derive"] }
ed25519-dalek = "2.2.0"
hex = "0.4.3"
inquire = "0.7.5"
ntp = "0.5.0"
rand = "0.9.1"
serde = { version = "1.0", features = ["derive"] }  
serde_json = "1.0.140"
sha2 = "0.10.9"
uuid = { version = "1.8", features = ["serde", "v4"] }  
